--- a/views/index.html
+++ b/views/index.html
@@ -7,17 +7,90 @@
     <title>Olah Gambar Cakep</title>
 
     <link
-      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
+      href="https://code.getmdl.io/1.3.0/material.teal-indigo.min.css"
       rel="stylesheet"
     />
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    ;
 
     <style>
+      body {
+        background: #7e57c2;
+      }
+
+      a {
+        text-decoration: none;
+      }
+
+      .jst-material-input-file {
+        margin-top: 70px;
+      }
+
+      .container {
+        width: 72%;
+        max-width: 500px;
+        padding: 40px 20px;
+        right: 0;
+        left: 0;
+        background: #fff;
+        margin: auto;
+      }
+
+      h2 {
+        margin-bottom: -30px;
+        text-align: center;
+      }
+
+      h6 {
+        margin-bottom: 30px;
+        color: gray;
+        text-align: center;
+        padding: 10px;
+      }
+
+      .file-upload {
+        margin: 0 10px 0 25px;
+      }
+      .file-upload input.upload {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 0;
+        padding: 0;
+        z-index: 10;
+        font-size: 20px;
+        cursor: pointer;
+        height: 36px;
+        opacity: 0;
+        filter: alpha(opacity=0);
+      }
+
+      #fileuploadurl {
+        border: none;
+        font-size: 12px;
+        padding-left: 0;
+        width: 100px;
+      }
+
+      .hasil-foto-card.mdl-card {
+        margin: auto;
+        margin-top: 24px;
+        width: 80%;
+        height: 500px;
+      }
+      .hasil-foto-card > .mdl-card__title {
+        color: #fff;
+      }
+
       .log_view_container {
+        width: 75%;
+        max-width: 500px;
+        right: 0;
+        left: 0;
+        margin: auto;
         margin-top: 24px;
         overflow-y: scroll;
         background-color: black;
@@ -26,44 +99,49 @@
         max-height: 100px;
         padding: 12px;
       }
-
-      .foto-card__media {
-        background-image: url("output/e99808fd-9cfb-45b0-b746-ffcf600ab543_exp2jpg.png");
-      }
-
-      .mdc-card {
-        margin-top: 44px;
-        width: 100%;
-        max-width: 500px;
-        height: auto;
-      }
     </style>
   </head>
 
   <body>
-    <div>
-      <input
-        class="mdc-button mdc-button--raised mdc-card__action"
-        type="file"
-        id="foto"
-        name="foto"
-      />
-      <input
-        class="mdc-button mdc-button--raised mdc-card__action"
-        type="button"
-        onclick="upload()"
-        value="Upload!"
-      />
-    </div>
-    <div class="log_view_container" id="log_view_container">
-      <code id="log_view">
-        Log pemrosesan gambar keluar disini. Pilih file gambar dan upload untuk
-        melihat hasil.
-      </code>
+    <div class="jst-material-input-file">
+      <div class="container mdl-shadow--6dp">
+        <h2>Gambar ke Sketsa</h2>
+        <h6>
+          Dengan cinta oleh
+          <a href="https://github.com/anan474" target="_blank">
+            Agung Tuah Ananda
+          </a>
+        </h6>
+        <div
+          class="file-upload mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+        >
+          <span>Pilih Gambar</span>
+          <input type="file" name="foto" id="foto" class="upload" />
+        </div>
+        <input
+          type="text"
+          id="fileuploadurl"
+          readonly
+          placeholder="Maksimal 2MB"
+        />
+        <input
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          type="button"
+          onclick="upload()"
+          id="upload_btn"
+          value="Upload"
+        />
+        <div class="gambar_hasil_container" id="gambar_hasil_container"></div>
+      </div>
+      <div class="log_view_container" id="log_view_container">
+        <code id="log_view">
+          Log pemrosesan gambar keluar disini. Pilih file gambar dan upload
+          untuk melihat hasil.
+        </code>
+      </div>
     </div>
 
-    <div class="gambar_hasil_container" id="gambar_hasil_container"></div>
-
+    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     <script src="socket.io/socket.io.js"></script>
     <script>
       let socketId = "";
@@ -75,6 +153,8 @@
 
       const log_view_container = document.getElementById("log_view_container");
       const log_view = document.getElementById("log_view");
+      const upload_btn = document.getElementById("upload_btn");
+
       socket.on("event", function (msg) {
         log_view.innerText += msg.data;
         log_view_container.scrollTop = log_view_container.scrollHeight;
@@ -84,42 +164,37 @@
         "gambar_hasil_container"
       );
       socket.on("hasil", function (msg) {
-        console.log(msg);
         gambar_hasil_container.innerHTML = `
-        <div class="mdc-card">
-          <div
-            class="foto-card__media mdc-card__media mdc-card__media--square"
-          ></div>
-          <div class="mdc-card__actions">
-            <div class="mdc-card__action-buttons">
+        <div class="hasil-foto-card mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand" style="background: url('${msg.url.png}')
+          bottom right 15% no-repeat #fff;"></div>
+            <div class="mdl-card__actions mdl-card--border">
               <button
-                class="mdc-button--raised mdc-button mdc-card__action mdc-card__action--button"
-                onclick="open_new_tab('${msg.url.png}')"
+                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                onclick = "open_new_tab('${msg.url.png}')";
               >
-                <div class="mdc-button__ripple"></div>
-                <i class="material-icons mdc-button__icon" aria-hidden="true"
-                  >download</i
-                >
-                <span class="mdc-button__label">PNG</span>
+                <i class="material-icons">download</i>
+                PNG
               </button>
               <button
-                class="mdc-button mdc-button--raised mdc-card__action mdc-card__action--button"
-                onclick="open_new_tab('${msg.url.svg}')"
+                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                onclick = "open_new_tab('${msg.url.svg}')";
               >
-                <div class="mdc-button__ripple"></div>
-                <i class="material-icons mdc-button__icon" aria-hidden="true"
-                  >download</i
-                >
-                <span class="mdc-button__label">SVG</span>
+                <i class="material-icons">download</i>
+                SVG
               </button>
             </div>
           </div>
-        </div>
         `;
-        console.log(gambar_hasil_container.innerHTML);
+
+        upload_btn.value = "Upload";
+        upload_btn.disabled = false;
       });
 
       const upload = () => {
+        upload_btn.value = "Memproses...";
+        upload_btn.disabled = true;
+
         const files = document.getElementById("foto").files;
         const formData = new FormData();
         formData.append("foto", files[0]);
@@ -141,15 +216,6 @@
         const open_link = window.open("", "_blank");
         open_link.location = url;
       };
-
-      const selector =
-        ".mdc-button, .mdc-icon-button, .mdc-card__primary-action";
-      const ripples = [].map.call(
-        document.querySelectorAll(selector),
-        function (el) {
-          return new mdc.ripple.MDCRipple(el);
-        }
-      );
     </script>
   </body>
 </html>
